<resources>
    <string name="app_name">EDUMATE - B.Tech Notes</string>
    <string name="edumate">EDUMATE</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="loginPageHeading">Hello,\nLogin Now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_npassword">Forget password?</string>
    <string name="login">Login</string>
    <string name="messageForSignUp">You don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="college_name">College Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signUpPageHeading">Hello,\nSign Up Now</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forget_password">Forget\nPassword</string>
    <string name="reset">Reset</string>
    <string name="tag_line">Your Learning Partner</string>
    <string name="r_amp_d"><![CDATA[R & D]]></string>
    <string name="article">Article</string>
    <string name="placement">Placement</string>
    <string name="home">Home</string>
    <string name="playlist">Playlist</string>
    <string name="department">Department</string>
    <string name="cse">CSE</string>
    <string name="it">IT</string>
    <string name="ece">ECE</string>
    <string name="me">ME</string>
    <string name="bca">BCA</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact Us</string>
    <string name="study_playlist">Study Playlist</string>
    <string name="coding_playlist">Coding Playlist</string>
    <string name="placement_series">Placement Series</string>
    <string name="loading">Loading</string>
    <string name="todo">TODO</string>
    <string name="from"><![CDATA[By\nHarsh & Prince]]></string>
    <string name="ai_ds"><![CDATA[AI & DS]]></string>
    <string name="ai_ml"><![CDATA[AI & ML]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_name">Hello Name!</string>
    <string name="forget_pass">Forget Password</string>
    <string name="articles">Articles</string>
    <string name="blogs">Blogs</string>
    <string name="our_team">Our Team</string>
    <string name="prince_kumar">Prince Kumar</string>
    <string name="developer">Developer</string>
    <string name="founder">Founder</string>
    <string name="harsh_jindal">Harsh Jindal</string>
    <string name="blog_title">Blog Title</string>
    <string name="exit_app">Exit App</string>
    <string name="do_you_really_want_to_exit">Do you really want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share_app">Share App</string>
    <string name="courses">Courses</string>
    <string name="find_a_course_you_want_to_learn">Find a course you want to learn</string>
    <string name="recommended_course">Recommended Course</string>
    <string name="category">Category</string>
    <string name="certificate">| Certificate</string>
    <string name="chai_code_free_courses">Chai Code Free Courses</string>
    <string name="sde_complete_package">SDE Complete Package</string>
    <string name="sde_skills">
    "🚀 Key Skills for SDE Role:\n\n"
    "🧠 Programming Languages: Java, C++, Python.\n"
    "📚 DSA\n"
    "🛠️ System Design\n"
    "💾 DBMS\n"
    "🖥️ Operating Systems\n"
    "🌐 Networking\n"
    "🔄 Version Control\n"
    "☁️ Cloud Platforms: AWS, Azure, GCP (Optional).\n"
    "📦 Frameworks: Spring Boot, Django, Flask, React, Angular.\n\n"
    "💡 Soft Skills: Problem-Solving, Agile Methodologies, Communication, Teamwork.\n\n"
    "💡 Focus Areas: DSA, System Design, and Strong Programming Skills."
</string>
    <string name="free_package">Free Package</string>
    <string name="start_learning">Start Learning</string>
    <string name="description">Description</string>
    <string name="step_title">Step Title</string>


</resources>