<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/placement"
        android:icon="@drawable/placement"
        android:title="@string/placement"/>

    <item android:title="@string/playlist">
        <menu>
            <item
                android:id="@+id/studyPlaylist"
                android:icon="@drawable/playlist"
                android:title="@string/study_playlist"/>
            <item
                android:id="@+id/codingPlaylist"
                android:icon="@drawable/coding"
                android:title="@string/coding_playlist"/>
        </menu>
    </item>


    <item android:title="@string/department">

        <menu>
            <item
                android:id="@+id/aiDS"
                android:icon="@drawable/ai_ds"
                android:title="@string/ai_ds"/>
            <item
                android:id="@+id/aiML"
                android:icon="@drawable/ai_ml"
                android:title="@string/ai_ml"/>
            <item
                android:id="@+id/bca"
                android:icon="@drawable/bca"
                android:title="@string/bca"/>
            <item
                android:id="@+id/cse"
                android:icon="@drawable/cse"
                android:title="@string/cse"/>
            <item
                android:id="@+id/ece"
                android:icon="@drawable/ece"
                android:title="@string/ece"/>
            <item
                android:id="@+id/it"
                android:icon="@drawable/it"
                android:title="@string/it"/>
            <item
                android:id="@+id/me"
                android:icon="@drawable/me"
                android:title="@string/me"/>
        </menu>
    </item>

    <item android:title="@string/profile">

        <menu>
            <item
                android:id="@+id/profile"
                android:icon="@drawable/profile"
                android:title="@string/profile"/>
            <item
                android:id="@+id/forgetPassword"
                android:icon="@drawable/forget_password"
                android:title="@string/forget_npassword"/>
            <item
                android:id="@+id/logOut"
                android:icon="@drawable/log_out"
                android:title="@string/log_out"/>
        </menu>
    </item>

    <item android:title="@string/about_us">

        <menu>
            <item
                android:id="@+id/contactUs"
                android:icon="@drawable/contact_us"
                android:title="@string/contact_us"/>
        </menu>
    </item>
</menu>