<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@drawable/alert_background"
    android:elevation="4dp">

    <!-- Title -->
    <TextView
        android:id="@+id/alertTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/exit_app"
        android:textSize="18sp"
        android:textColor="@color/black1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Message -->
    <TextView
        android:id="@+id/alertMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/do_you_really_want_to_exit"
        android:textSize="14sp"
        android:fontFamily="@font/inter"
        android:textColor="@color/black2"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/alertTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Buttons -->
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/alertMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Positive Button -->
        <Button
            android:id="@+id/positiveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary"
            android:text="@string/yes"
            android:textColor="@color/white" />

        <!-- Negative Button -->
        <Button
            android:id="@+id/negativeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/no"
            android:textColor="@color/white"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
